--- a/Prison_Management_System/Prison_Management_System.csproj
+++ b/Prison_Management_System/Prison_Management_System.csproj
@@ -28,4 +28,8 @@
     <Folder Include="Database_Files\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.5.2" />
+  </ItemGroup>
+
 </Project>
